# dsbase

./: .gitignore  README.md  dsbase.code-workspace  dsuniverse.code-workspace  justfile  pyproject.toml  pyrightconfig.json
.github/workflows/: python-publish.yml
src/dsbase/: __init__.py
src/dsbase/animate/: __init__.py  walking_man.py
src/dsbase/env/: env_manager.py
src/dsbase/files/: file_manager.py
src/dsbase/media/: media_manager.py
src/dsbase/util/: argparser.py  setup.py
