[project]
name = "0"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []
classifiers = ["Private :: Do Not Upload"]

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["dsuniverse"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
